Setup paperclip, add user profile pics

--- a/app/assets/stylesheets/components/header.scss
+++ b/app/assets/stylesheets/components/header.scss
@@ -29,6 +29,14 @@ header {
 header nav {
   display: flex;
   flex-direction: row;
+  a {
+    display: flex;
+    flex-direction: row;
+    img {
+      height: 25px;
+      width: 25px;
+    }
+  }
 }
 
 .logo::after {
