--- a/app/assets/stylesheets/base/colors.scss
+++ b/app/assets/stylesheets/base/colors.scss
@@ -3,3 +3,4 @@ $border-blue: #29487D;
 $background-gray: #E9EEEB;
 $link-blue: rgb(60, 93, 165);
 $subtle: rgb(158, 158, 169);
+$border-gray: rgb(232, 233, 236);
