--- a/app/assets/stylesheets/components/posts.scss
+++ b/app/assets/stylesheets/components/posts.scss
@@ -1,8 +1,8 @@
 .post-item {
-  width: 510px;
+  width: 486px;
   padding: 12px;
   background-color: white;
-  border: 1px solid rgb(232, 233, 236);
+  border: 1px solid $border-gray;
   border-radius: 3px;
   margin-bottom: 10px;
   font-size: 14px;
