--- a/app/assets/stylesheets/components/profile/profile_header.scss
+++ b/app/assets/stylesheets/components/profile/profile_header.scss
@@ -1,4 +1,5 @@
 .profile-header {
+  box-sizing: border-box;
   width: 848px;
   margin-bottom: 16px;
   position: relative;
@@ -6,22 +7,22 @@
   .cover-photo-container {
     height: 315px;
     border: 1px solid rgba(0, 0, 0, 0.5);
-
+    border-top: 0;
   }
 
   .profile-pic-container {
     height: 170px;
     width: 170px;
     position: absolute;
-    bottom: 14px;
-    left: 14px;
+    bottom: 16px;
+    left: 16px;
     border: 1px solid black;
     border-radius: 3px;
 
     .profile-pic {
       border: 3px solid white;
       border-radius: 3px;
-      width: calc(100% - 6px);
+      width: 100%;
       height: auto;
     }
   }
@@ -34,13 +35,14 @@
     display: flex;
     flex-direction: row;
     padding-left: 200px;
-    font-size: 14px;
+    font-size: 15px;
     font-weight: 600;
+    color: $link-blue;
+    letter-spacing: 0.5px;
 
     a {
       display: block;
       padding: 14px;
-      color: $link-blue;
       border-right: 1px solid $border-gray;
     }
 
