Continue post redux cycle

--- a/app/assets/stylesheets/components/profile/profile.scss
+++ b/app/assets/stylesheets/components/profile/profile.scss
@@ -2,17 +2,21 @@
 
   .profile-contents {
     display: flex;
+    justify-content: space-between;
   }
 
   .left {
-    margin-right: 16px;
+    width: 320px;
 
     .card {
+      margin-bottom: 16px;
       background: white;
-      width: 320px;
       border: 1px solid $border-gray;
       border-radius: 3px;
-      margin-bottom: 16px;
     }
+  }
+
+  .right {
+    width: 510px;
   }
 }
