--- a/app/assets/stylesheets/base/colors.scss
+++ b/app/assets/stylesheets/base/colors.scss
@@ -5,3 +5,4 @@ $link-blue: rgb(60, 93, 165);
 $subtle: rgb(158, 158, 169);
 $border-gray: rgb(232, 233, 236);
 $button-blue: rgb(74, 108, 189);
+$delete-red: rgb(190, 24, 35);
