--- a/app/assets/stylesheets/components/profile/profile_header.scss
+++ b/app/assets/stylesheets/components/profile/profile_header.scss
@@ -27,6 +27,20 @@
     }
   }
 
+  .username {
+    position: absolute;
+    bottom: 60px;
+    left: 200px;
+    color: white;
+    font-size: 26px;
+    font-weight: 500;
+    text-shadow:
+      -1px -1px 0 #000,
+      1px -1px 0 #000,
+      -1px 1px 0 #000,
+      1px 1px 0 #000;
+  }
+
   nav {
     background: white;
     border: 1px solid $border-gray;
