Delete post prompt incl. redux and backend

--- a/app/assets/stylesheets/base/colors.scss
+++ b/app/assets/stylesheets/base/colors.scss
@@ -1,8 +1,12 @@
 $fb-blue: #3B5998;
 $border-blue: #29487D;
+
 $background-gray: #E9EEEB;
+$header-gray: rgb(247, 248, 250);
 $link-blue: rgb(60, 93, 165);
 $subtle: rgb(158, 158, 169);
 $border-gray: rgb(232, 233, 236);
+
 $button-blue: rgb(74, 108, 189);
+
 $delete-red: rgb(190, 24, 35);
