Switch to <Link>

--- a/app/assets/stylesheets/components/delete_prompt.scss
+++ b/app/assets/stylesheets/components/delete_prompt.scss
@@ -49,6 +49,7 @@
       color: white;
       font-size: 14px;
       background: $button-blue;
+      border: 1px solid $border-blue;
     }
 
     .button:hover {
