In Progress: Adjust friend card styling

--- a/app/assets/stylesheets/components/post_form.scss
+++ b/app/assets/stylesheets/components/post_form.scss
@@ -70,6 +70,7 @@
       font-size: 14px;
       font-weight: 500;
       border-radius: 2px;
+      border: 1px solid $border-blue;
       background: $button-blue;
       text-align: center;
       height: 24px;
