--- a/app/assets/stylesheets/components/profile/friends_card.scss
+++ b/app/assets/stylesheets/components/profile/friends_card.scss
@@ -4,45 +4,38 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
+    // justify-content: space-between;
 
-    padding: 0px 6px;;
+    padding-left: 6px;
 
 
     .friend-item {
       position: relative;
-      width: 32%;
-      padding-right: 6px;
-      padding-bottom: 6px;
-      // height: calc(33% - 16px);
-      // border: 1px solid black;
-      // box-sizing: border-box;
+      width: calc(33% - 5px);
+      // padding-right: 6px;
+      // padding-bottom: 7px;
+
+      .gradient {
+        background: linear-gradient(transparent, rgba(0, 0, 0, .7));
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: calc(100% - 6px);
+        margin-bottom: 6px;
+
+
+        span {
+          padding-left: 5px;
+          color: white;
+          font-size: 12px;
+        }
+      }
 
       img {
         width: 100%;
         height: 100%;
-        filter: invert(100%);
       }
 
-      span {
-        position: absolute;
-        bottom: 5px;
-        left: 3px;
-
-        color: white;
-        font-size: 12px;
-        // -webkit-text-stroke: 1px black;
-
-        text-shadow:
-          -1px -1px 0 #000,
-          1px -1px 0 #000,
-          -1px 1px 0 #000,
-          1px 1px 0 #000;
-      }
-
-    }
-    .friend-item:nth-of-type(3n) {
-      padding-right: 0px;
     }
   }
 }
