Factor out generic profile card

--- a/app/assets/stylesheets/components/profile/friends_card.scss
+++ b/app/assets/stylesheets/components/profile/friends_card.scss
@@ -12,7 +12,7 @@
     .friend-item {
       position: relative;
       width: calc(33% - 5px);
-      // padding-right: 6px;
+      padding-right: 6px;
       // padding-bottom: 7px;
 
       .gradient {
