--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,3 +27,7 @@ body {
   background-color: $background-gray;
   font-family: 'Roboto', sans-serif;
 }
+
+.shadow {
+  box-shadow: 0px 2px 5px -1px rgba(0,0,0,0.29);
+}
