--- a/app/assets/stylesheets/base/colors.scss
+++ b/app/assets/stylesheets/base/colors.scss
@@ -1,7 +1,7 @@
 $fb-blue: #3B5998;
 $border-blue: #29487D;
 
-$background-gray: #E9EEEB;
+$background-gray: #E9EBEE;
 $header-gray: rgb(247, 248, 250);
 $link-blue: rgb(60, 93, 165);
 $subtle: rgb(158, 158, 169);
