Add comment migration, model, associations

--- a/app/assets/stylesheets/components/profile/profile_header.scss
+++ b/app/assets/stylesheets/components/profile/profile_header.scss
@@ -23,7 +23,7 @@
       border: 3px solid white;
       border-radius: 3px;
       width: 100%;
-      height: auto;
+      height: 100%;
     }
   }
 
