--- a/app/assets/stylesheets/components/profile/profile_card.scss
+++ b/app/assets/stylesheets/components/profile/profile_card.scss
@@ -6,6 +6,7 @@
     background-color: white;
     color: black;
     font-size: 16px;
+    line-height: 20px;
     display: flex;
     align-items: center;
 
