--- a/app/assets/stylesheets/components/profile/profile_header.scss
+++ b/app/assets/stylesheets/components/profile/profile_header.scss
@@ -63,5 +63,9 @@
     a:first-child {
       border-left: 1px solid $border-gray;
     }
+
+    a:hover {
+      text-decoration: underline;
+    }
   }
 }
