--- a/app/assets/stylesheets/components/shared/comment_actions.scss
+++ b/app/assets/stylesheets/components/shared/comment_actions.scss
@@ -1,7 +1,13 @@
 .comment-actions {
   line-height: 200%;
+  display: flex;
 
-  span {
+  li {
+    padding-right: 8px;
+    padding-bottom: 0 !important;
+  }
+
+  span, label {
     cursor: pointer;
   }
 }
