--- a/app/assets/stylesheets/components/shared/comments.scss
+++ b/app/assets/stylesheets/components/shared/comments.scss
@@ -1,9 +1,11 @@
 .post-bottom {
   background: rgb(247, 248, 250);
+  padding: 12px;
+  padding-top: 0;
 
   .post-actions {
     border-top: 1px solid $border-gray;
-    padding: 12px;
+    padding: 12px 0px;
   }
 
   .post-comments {
@@ -11,7 +13,6 @@
     flex-direction: column;
     font-size: 12px;
     padding-top: 9px;
-    margin: 0px 12px;
     border-top: 1px solid $border-gray;
 
 
