scroll to coment reply form

--- a/app/assets/stylesheets/components/profile/post_comment_form.scss
+++ b/app/assets/stylesheets/components/profile/post_comment_form.scss
@@ -17,4 +17,9 @@
     border: 1px solid $border-gray;
     padding-left: 6px;
   }
+
+  input:focus {
+    // TEMPORARY -- SUPER UGLY
+    border: 3px solid $button-blue;
+  }
 }
