--- a/app/assets/stylesheets/components/login_header.scss
+++ b/app/assets/stylesheets/components/login_header.scss
@@ -6,4 +6,37 @@
   padding: 0px 17%;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+
+  h1 {
+    font-size: 40px;
+    font-weight: 600;
+  }
+
+  form {
+    display: flex;
+
+    label {
+      font-size: 12px;
+      display: flex;
+      flex-direction: column;
+    }
+
+    input {
+      font-size: 14px;
+      background-color: white;
+      border: 1px solid black;
+      margin-top: 4px;
+      margin-right: 12px;
+      padding: 3px;
+    }
+
+    input[type='submit'] {
+      font-size: 12px;
+      background-color: $button-blue;
+      font-weight: 500;
+      align-self: flex-end;
+      padding: 4px 6px;
+    }
+  }
 }
