--- a/app/assets/stylesheets/components/login_header.scss
+++ b/app/assets/stylesheets/components/login_header.scss
@@ -24,6 +24,7 @@
 
     input {
       font-size: 14px;
+      color: black;
       background-color: white;
       border: 1px solid black;
       margin-top: 4px;
@@ -33,12 +34,13 @@
 
     input[type='submit'] {
       font-size: 12px;
+      color: white;
       background-color: rgb(55, 110, 172);
       border: 1px solid $border-blue;
       border-radius: 2px;
       font-weight: 500;
       align-self: flex-end;
-      padding: 4px 6px;
+      padding: 4px 7px;
     }
 
     input[type='submit']:hover {
