--- a/app/assets/stylesheets/components/profile/profile_card.scss
+++ b/app/assets/stylesheets/components/profile/profile_card.scss
@@ -3,7 +3,7 @@
   border: 1px solid rgb(232, 233, 236);
 
   header {
-    background-color: white;
+    background-color: transparent;
     color: black;
     font-size: 16px;
     line-height: 20px;
