Implement friend button show logic

--- a/app/assets/stylesheets/components/loaders/dots.scss
+++ b/app/assets/stylesheets/components/loaders/dots.scss
@@ -1,13 +1,14 @@
 .spinner {
   margin: 100px auto 0;
-  width: 70px;
+  // width: 70px;
   text-align: center;
 }
 
 .spinner > div {
   width: 18px;
   height: 18px;
-  background-color: #333;
+  background-color: $fb-blue;
+  margin: 5px;
 
   border-radius: 100%;
   display: inline-block;
