--- a/app/assets/stylesheets/components/profile/profile_header.scss
+++ b/app/assets/stylesheets/components/profile/profile_header.scss
@@ -42,7 +42,7 @@
       1px 1px 0 #000;
   }
 
-  nav {
+  .profile-header-nav {
     background: white;
     border: 1px solid $border-gray;
     border-top: 0;
