--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,3 +31,8 @@ body {
 .shadow {
   box-shadow: 0px 2px 5px -2px rgba(0,0,0,0.29);
 }
+
+img {
+  object-fit: cover;
+  object-position: center;
+}
