--- a/app/assets/stylesheets/components/profile/friends_card.scss
+++ b/app/assets/stylesheets/components/profile/friends_card.scss
@@ -5,20 +5,22 @@
     flex-direction: row;
     flex-wrap: wrap;
     padding-left: 6px;
+    overflow: hidden;
+    margin-bottom: 6px;
 
     .friend-item {
       position: relative;
       width: calc(33% - 5px);
+      height: 0;
+      padding-bottom: calc(33% - 5px);
       padding-right: 6px;
-      
+
       .gradient {
         background: linear-gradient(transparent, rgba(0, 0, 0, .7));
         position: absolute;
         bottom: 0;
         left: 0;
         width: calc(100% - 6px);
-        margin-bottom: 6px;
-
 
         span {
           padding-left: 5px;
@@ -29,7 +31,7 @@
 
       img {
         width: 100%;
-        height: 100%;
+        height: auto;
       }
 
     }
