--- a/app/assets/stylesheets/components/profile/profile_header.scss
+++ b/app/assets/stylesheets/components/profile/profile_header.scss
@@ -15,6 +15,7 @@
     height: 170px;
     width: 170px;
     position: absolute;
+    overflow: hidden;
     bottom: 16px;
     left: 16px;
     border: 1px solid black;
@@ -24,7 +25,9 @@
       border: 3px solid white;
       border-radius: 3px;
       width: 100%;
-      height: 100%;
+      height: auto;
+      height: 168px;
+      width: 168px;
     }
   }
 
