--- a/app/assets/stylesheets/components/shared/comments.scss
+++ b/app/assets/stylesheets/components/shared/comments.scss
@@ -16,6 +16,24 @@
     border-top: 1px solid $border-gray;
 
     .post-comment-item {
+
+      .comment-content {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+
+        .comment-top {
+          display: flex;
+          justify-content: space-between;
+
+          .post-dd-toggle {
+            font-size: 12px;
+            margin-left: 8px;
+            vertical-align: super;
+          }
+        }
+      }
+
       .post-comment-item {
         padding-left: 40px;
         margin-left: -40px;
