Style comment nav

--- a/app/assets/stylesheets/components/shared/comments.scss
+++ b/app/assets/stylesheets/components/shared/comments.scss
@@ -30,6 +30,7 @@
             font-size: 12px;
             margin-left: 8px;
             vertical-align: super;
+            color: #9e9ea9;
           }
         }
       }
