Comment style bug

--- a/app/assets/stylesheets/components/shared/comments.scss
+++ b/app/assets/stylesheets/components/shared/comments.scss
@@ -20,7 +20,7 @@
       .comment-content {
         display: flex;
         flex-direction: column;
-        width: 100%;
+        width: calc(100% - 41px);
 
         .comment-top {
           display: flex;
