--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -12,6 +12,10 @@
   window.staticImages = {
     pencil: "<%= asset_path('pencil.png') %>",
     camera: "<%= asset_path('camera.png') %>",
+    like: "<%= asset_path('like.png') %>",
+    unlike: "<%= asset_path('unlike.png') %>",
+    likeCircle: "<%= asset_path('like-circle.png') %>",
+    commentBubble: "<%= asset_path('comment-bubble.png') %>",
     friendsBubble: "<%= asset_path('friends-bubble.png') %>",
     globeBubble: "<%= asset_path('globe-bubble.png') %>",
     photoBubble: "<%= asset_path('photo-bubble.png') %>",
