--- a/app/assets/stylesheets/components/profile/post_comment_form.scss
+++ b/app/assets/stylesheets/components/profile/post_comment_form.scss
@@ -1,7 +1,7 @@
 .post-comment-form {
   background: rgb(247, 248, 250);
   display: flex;
-  padding-top: 0;
+  padding-top: 4px;
   font-size: 12px;
 
   img {
