--- a/app/assets/stylesheets/components/shared/comments.scss
+++ b/app/assets/stylesheets/components/shared/comments.scss
@@ -10,7 +10,7 @@
     font-size: 12px;
 
     .post-comment-item {
-      padding-top: 6px;
+      margin-top: 6px;
 
       .comment-content {
         display: flex;
