--- a/app/assets/stylesheets/components/posts.scss
+++ b/app/assets/stylesheets/components/posts.scss
@@ -113,6 +113,7 @@
       padding: 6px 2px;
       font-size: 12px;
       color: rgb(97, 103, 112);
+      border-bottom: 1px solid $border-gray;
 
       img {
         height: 16px;
