--- a/app/assets/stylesheets/components/post_form.scss
+++ b/app/assets/stylesheets/components/post_form.scss
@@ -45,7 +45,6 @@
   form {
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
     padding-top: 12px;
 
     div {
@@ -65,6 +64,7 @@
         resize: none;
         display: flex;
         align-items: center;
+        overflow: hidden;
       }
     }
 
@@ -83,6 +83,7 @@
       align-items: center;
       justify-content: center;
       margin: 9px;
+      align-self: flex-end;
     }
   }
 }
