complete intro card

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -19,6 +19,10 @@
     friendsBubble: "<%= asset_path('friends-bubble.png') %>",
     globeBubble: "<%= asset_path('globe-bubble.png') %>",
     photoBubble: "<%= asset_path('photo-bubble.png') %>",
+    hometown: "<%= asset_path('hometown.png') %>",
+    location: "<%= asset_path('location.png') %>",
+    school: "<%= asset_path('school.png') %>",
+    workplace: "<%= asset_path('workplace.png') %>",
   }
 </script>
 <main id="root"></main>
