--- a/app/assets/stylesheets/components/signup.scss
+++ b/app/assets/stylesheets/components/signup.scss
@@ -35,7 +35,7 @@
         display: flex;
         justify-content: space-between;
 
-        input {
+        .auth-field {
           width: 48.5%;
         }
       }
