add login error tooltip

--- a/app/assets/stylesheets/components/login_header.scss
+++ b/app/assets/stylesheets/components/login_header.scss
@@ -13,8 +13,9 @@
     font-weight: 600;
   }
 
-  form {
+  .login-form {
     display: flex;
+    position: relative;
 
     label {
       font-size: 12px;
@@ -45,6 +46,53 @@
 
     input[type='submit']:hover {
       background-color: rgb(44, 94, 148);
+    }
+
+    .login-error-tooltip {
+      position: absolute;
+      transform: translateX(-100%);
+      left: -10px;
+      top: 10px;
+      padding: 10px 20px;
+      background-color: $error-red;
+      color: white;
+      font-weight: 600;
+      font-size: 14px;
+      border: 0;
+      border-radius: 2px;
+      box-shadow:
+        0 0 0 1px rgba(139, 3, 0, .75),
+        0 1px 10px rgba(0, 0, 0, .35);
+
+      &:before {
+        content: "";
+        position: absolute;
+        bottom: 6px;
+        right: -10px;
+        margin-left: -10px;
+        width: 0;
+        height: 0;
+        border-top: 11px solid transparent;
+        border-bottom: 11px solid transparent;
+        border-right: 0px solid #a63333;
+        border-left: 10px solid #a63333;
+        background: transparent;
+      }
+
+      &:after {
+        content: "";
+        position: absolute;
+        bottom: 7px;
+        right: -9px;
+        margin-left: -10px;
+        width: 0;
+        height: 0;
+        border-top: 10px solid transparent;
+        border-bottom: 10px solid transparent;
+        border-right: 0px solid $error-red;
+        border-left: 10px solid $error-red;
+        background: transparent;
+      }
     }
   }
 }
