Add searchbar prompts to friends things

--- a/app/assets/stylesheets/components/profile/friends.scss
+++ b/app/assets/stylesheets/components/profile/friends.scss
@@ -32,6 +32,10 @@
     display: flex;
     box-sizing: content-box;
 
+    .no-friends {
+      border: none;
+    }
+
     > li {
       box-sizing: border-box;
       border: 1px solid $border-gray;
