--- a/app/assets/stylesheets/components/profile/friends_card.scss
+++ b/app/assets/stylesheets/components/profile/friends_card.scss
@@ -8,6 +8,8 @@
     overflow: hidden;
     margin-bottom: 6px;
 
+    li { font-size: 14px; }
+
     .friend-item {
       position: relative;
       width: calc(33% - 5px);
