add magnifying class to static assets

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -10,6 +10,7 @@
   <% end %>
 
   window.staticImages = {
+    searchIcon: "<%= asset_path('search-icon.png') %>",
     pencil: "<%= asset_path('pencil.png') %>",
     camera: "<%= asset_path('camera.png') %>",
     like: "<%= asset_path('like.png') %>",
