complete cover photo upload button styling

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -23,6 +23,7 @@
     location: "<%= asset_path('location.png') %>",
     school: "<%= asset_path('school.png') %>",
     workplace: "<%= asset_path('workplace.png') %>",
+    bwCamera: "<%= asset_path('bw-camera.png') %>",
   }
 </script>
 <main id="root"></main>
