--- a/app/assets/stylesheets/components/profile/cover_photo_upload.scss
+++ b/app/assets/stylesheets/components/profile/cover_photo_upload.scss
@@ -1,29 +1,55 @@
 .update-cover-photo {
   position: absolute;
-  top: 20px;
-  left: 20px;
+  top: 25px;
+  left: 25px;
   display: flex;
   align-items: center;
   padding: 5px;
+  border-radius: 5px;
+  transition: all 250ms;
+  border: 1px solid rgba(0,0,0,0);
 
   img {
     height: 16px;
     width: 16px;
+    filter: invert(100%);
+    opacity: 0.7;
   }
 
-  &:hover {
+
+  &.active {
+    top: 20px;
+    left: 20px;
     background-color: rgba(0, 0, 0, 0.5);
     border: 1px solid white;
-    border-radius: 5px;
-    font-size: 14px;
-    opacity: 1;
+
+    transition: all 250ms;
+
+    img { opacity: 1; }
+
+    &::after {
+      content: "";
+      opacity: 0px;
+      font-size: 0px;
+      transition: all 250ms;
+    }
   }
 
-  &::after {
-    content: "Update Cover Photo";
-    color: white;
-    padding-left: 5px;
-    opacity: 0;
-    transition: all 0.5s;
+  &.super-active {
+    &::after {
+      content: "Update Cover Photo";
+      padding-left: 5px;
+      color: white;
+      opacity: 1;
+      font-size: 14px;
+      transition: all 250ms;
+    }
   }
 }
+
+// background-color: rgba(0, 0, 0, 0.5);
+// border: 1px solid white;
+// border-radius: 5px;
+// font-size: 14px;
+// color: white;
+// transition: all 0.5s;
