--- a/app/assets/stylesheets/components/profile/profile_header.scss
+++ b/app/assets/stylesheets/components/profile/profile_header.scss
@@ -9,8 +9,6 @@
     height: 315px;
     border: 1px solid rgba(0, 0, 0, 0.5);
     border-top: 0;
-    // background-repeat: no-repeat;
-    // background-size: cover;
     transition: all 0.3s ease-in;
   }
 
@@ -24,13 +22,16 @@
     border: 1px solid black;
     border-radius: 3px;
 
-    .profile-pic {
+    .profile-pic-border {
       border: 3px solid white;
       border-radius: 3px;
-      width: 100%;
-      height: auto;
-      height: 168px;
-      width: 168px;
+
+      .profile-pic {
+        width: 100%;
+        height: auto;
+        height: 162px;
+        width: 162px;
+      }
     }
   }
 
