--- a/app/assets/stylesheets/components/login_header.scss
+++ b/app/assets/stylesheets/components/login_header.scss
@@ -33,7 +33,7 @@
       padding: 3px;
     }
 
-    input[type='submit'] {
+    input[type='submit'], button {
       font-size: 12px;
       color: white;
       background-color: rgb(55, 110, 172);
@@ -46,6 +46,17 @@
 
     input[type='submit']:hover {
       background-color: rgb(44, 94, 148);
+    }
+
+    button {
+      text-shadow: 0 1px 2px rgba(0,0,0,.5);
+      background: linear-gradient(#67ae55, #578843);
+      background-color: #69a74e;
+      border-color: #3b6e22 #3b6e22 #2c5115;
+    }
+
+    button:hover {
+      background: linear-gradient(#79bc64, #578843);
     }
 
     .login-error-tooltip {
